# analysi-app

./: .dockerignore  .env.example  .env.nightly  .env.test  .env.worktree-example  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  .pip-audit-ignore.txt  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pyproject.toml  skilltree.yml
.claude/: settings.json
.decisions/: claude-code.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  nightly-integration.yml  release.yml
agents/: README.md
agents/dev/: agent-to-langgraph.md
agents/source/: README.md  cybersec-task-builder.md  runbook-to-task-proposals.md  splunk-spl-writer-basic.md
cli/: .gitignore  CLAUDE.md  README.md  cli-config.yaml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cli/scripts/: generate-commands.ts
cli/src/: base-command.ts
content/: CLAUDE.md
content/examples/: manifest.json
content/foundation/: manifest.json
deployments/: CLAUDE.md
deployments/compose/: core.yml  deps.yml  ec2.yml  observability.yml
deployments/docker/: Dockerfile
deployments/k8s/: kind-config.yaml
docs/: PROJECTS.md  index.md
docs/concepts/: alert-lifecycle.md  component-architecture.md  concept.md  cy-language.md  disposition.md  hitl.md  index.md  tasks.md  workflow-generation.md  workflows.md
docs/context/: ai-soc-problem.md
docs/operations/: agent-skills-management.md  okta-federation.md  postgresql-access.md
docs/projects/: coverage-uplift.md  delos.md  paros.md  sifnos.md  skaros.md  symi.md  tilos.md
docs/reference/: index.md  integrations.md  terminology.md
docs/specs/: ActivityAuditTrail.md  AiAgentTasksAndKUs.md  Alerts.md  ArchitectureAndTechnology.md  ArtifactsStore.md  AuthAndRBAC.md  AutomatedWorkflowBuilder.md  ChatToolArchitectureRedesign.md  ConnectorPullService.md  ContentPacks.md  ControlEventBus.md  CustomerCredentials.md  HumanInTheLoop.md  Integrations.md  KnowledgeExtraction.md  KnowledgeIndex.md  LangGraphBuildingBlocks.md  MutableWorkflows.md  PackagingAndDeployments.md  ProductChatbot.md  SecureSkillOnboarding.md  TypedWorkflows.md  UIDesignDecisions.md  UnifiedAPIResponses.md  UnifiedJobFramework.md  UnifiedSchedulerAndActions.md  Workflows.md
scripts/: CLAUDE.md  README.md
scripts/agents_management/: CLAUDE.md  package.py
scripts/ci/: check-pod-log-health.sh  collect-k8s-logs.sh
scripts/code_quality_tools/: README.md  api_benchmark.py  check_cli_api_sync.py  check_partition_table_sync.py  code_metrics.json  combine_coverage.py  count_lines_of_code.py  detect_bare_httpx.py  detect_stdlib_logging.py  test_flakiness_detector.py  test_hygiene_audit.py
scripts/database/: partition_cleanup.py  schedule_health.py
scripts/debugging/: README_inspect_workflow.md  inspect_workflow_execution.py  rhodos-qa-test.py
scripts/generate_chat_skills/: generate_api_skill.py  generate_cli_skill.py  generate_integrations_skill.py
scripts/k8s/: bootstrap-terraform-backend.sh  eks.sh  local.sh  verify.sh  worktree-ports.sh
scripts/make/: flush-tenant-queue.sh  generate_openapi_types.sh  test-db.sh
scripts/monitoring/: macos_thermal_simple.py  start_thermal_exporter.sh  stop_thermal_exporter.sh
scripts/observability/: container_status.sh  monitoring_status.sh  star_dashboards.sh  start_monitoring.sh  stop_monitoring.sh
scripts/smoke_tests/: checks.sh  functional_test.py  verify.sh
skills/: README.md
src/alert_normalizer/: CLAUDE.md  __init__.py  __main__.py  aws_security_ocsf.py  base.py  base_ocsf.py  chronicle_ocsf.py  cortex_xdr_ocsf.py  crowdstrike_ocsf.py  elastic_ocsf.py  qradar_ocsf.py  sentinel_ocsf.py  sentinelone_ocsf.py  splunk.py  splunk_ocsf.py
src/analysi/: alert_worker.py  constants.py  main.py
tests/: __init__.py  analyze_notable_detail.py  conftest.py  test_config.py  test_repository_notables.py
tests/alert_normalizer/: test_aws_security_ocsf.py  test_chronicle_ocsf.py  test_cortex_xdr_ocsf.py  test_crowdstrike_ocsf.py  test_elastic_ocsf.py  test_ip_classification.py  test_qradar_ocsf.py  test_sentinel_ocsf.py  test_sentinelone_ocsf.py  test_splunk_demo_notables.py
tests/eval/: CLAUDE.md  __init__.py  conftest.py  cost_tracker.py  test_00_sdk_sanity.py  test_first_subgraph.py  test_phase1_db_skills.py  test_second_subgraph.py  test_task_building_basic.py  test_task_creation_e2e.py
tests/fixtures/: alert_enrichment_workflows.py  data_factory.py
tests/integration/: CLAUDE.md  conftest.py  test_activity_audit_api.py  test_alert_analysis_flow.py  test_alert_analysis_llm_integration.py  test_alert_endpoints.py  test_alert_enrichment_workflows.py  test_alert_webhook_signature_integration.py  test_api_ku_functions.py  test_artifact_critical_requirements.py  test_artifact_storage_integration.py  test_auth_endpoints.py  test_auto_artifact_capture.py  test_baseline_migration.py  test_chat_conversation_api.py  test_chat_streaming_api.py  test_complete_scenarios.py  test_component_deletion_cascade.py  test_component_fields_api.py  test_component_workflows.py  test_components_ku_type.py  test_connector_removal.py  test_control_event_channels_api.py  test_control_event_rules_api.py  test_control_events_api.py  test_credential_endpoints.py  test_credential_reload_simple.py  test_credential_security.py  test_cy_alert_functions.py  test_cy_interpolation_node_fix.py  test_cy_ku_access.py  test_cy_ku_functions_available.py  test_cy_script_ku_execution.py  test_cy_task_ku_execution_simple.py  test_cy_wrapper_functions.py  test_database_operations.py  test_documents_ku_crud_complete.py  test_echo_edr_framework_api.py  (+98 more)
ui/: .dockerignore  .env.example  .env.test  .gitignore  .lintstagedrc.mjs  .mcp.json  .prettierignore  CLAUDE.md  Makefile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.globalSetup.ts  prettier.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
(+2353 files in other folders)
